--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,7 @@
   <body>
     <header>
       <h1>All About Amiibo</h1>
-      <p><%= link_to 'About', about_path%></p>
+      <p><%= link_to 'Home', root_path%> | <%= link_to 'About', about_path%></p>
     </header>
   <%= yield %>
   </body>
