Added list view to amiibo controller, added show view to amiibo contoller but linking from list not working

--- a/app/views/amiibo/index.html.erb
+++ b/app/views/amiibo/index.html.erb
@@ -1,7 +1,7 @@
 <h2>Welcome!</h2>
 
 <p>Welcome to the home page for this project.</p>
-<p>To view all amiibo, click here</p>
+<p>To view all amiibo, <%= link_to 'click here', amiibo_list_path %></p>
 <p>To view all amiibo series, click here</p>
 <p>To view all character that have amiibo, click here</p>
 <p>To view all games that character come from, click here</p>
