Routing to specific amiibo working

--- a/app/views/amiibo/list.html.erb
+++ b/app/views/amiibo/list.html.erb
@@ -3,7 +3,7 @@
 <ul>
 	<% @amiibos.each do |amiibo| %>
 	<li>
-		<%= amiibo.name %>
+		<%= link_to amiibo.name, amiibo %>
 	</li>
 	<% end %>
 </ul>
