Images working, uncommented image tag

--- a/app/views/amiibo/show.html.erb
+++ b/app/views/amiibo/show.html.erb
@@ -1,6 +1,6 @@
 <h2><%= @amiibo.name %></h2>
 
-<!-- <img src=<%= @amiibo.image %>> -->
+<img src=<%= @amiibo.image %>>
 
 <ul>
 	<li>Amiibo Series: <%= @amiibo.amiibo_series.name%></li>
